Admin pages created

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "react-toastify": "^9.1.1",
+    "validate": "^5.2.0"
   }
 }
