--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.2.2",
-    "axios": "^1.3.3",
+    "axios": "^1.3.4",
+    "chart.js": "^4.1.2",
     "framer-motion": "^9.0.7",
+    "js-cookie": "^3.0.1",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
@@ -24,9 +27,7 @@
     "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "web-vitals": "^2.1.4",
-    "chart.js": "^4.1.2",
-    "react-chartjs-2": "^5.2.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
